--- a/tribute-page/styles.css
+++ b/tribute-page/styles.css
@@ -29,6 +29,14 @@ img{
     font-family:"Open Sans"; 
     text-align:justify;
     font-size:small;
+    max-width: 1000px;
+    font-size: 20px;
+    margin: 0 auto;
+    
+    margin-bottom: 20px;
+    padding: 10px;
+    text-indent: 50px;
+
 }
 .copyright{
     color :gray;
@@ -40,4 +48,26 @@ img{
     max-width: 100%;
     height : 5px;
     background-color : gold;
+}
+.tab{
+    tab-size: 2;;
+}
+.tributepart h4{
+    font-size: 40px;
+}
+
+fieldset{
+    border: 1px solid #ccc;
+    
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    
+    -webkit-box-shadow: 0px 1px 69px 25px rgba(59,59,59,0.87);
+    -moz-box-shadow: 0px 1px 69px 25px rgba(59,59,59,0.87);
+    box-shadow: 0px 1px 69px 25px rgba(59,59,59,0.87);
+    border-radius: 150px 20px 150px 20px;
+    -moz-border-radius: 150px 20px 150px 20px;
+    -webkit-border-radius: 150px 20px 150px 20px;
+    border: 6px solid #665f66;
 }
